refs #63102: Fix hover behaviour on Firefox and Safari. (#283)
* refs #63102: Fix hover behaviour on Firefox and Safari.

* refs #63102: Fix col width on mobile.

--- a/fw-child/resources/scss/child.scss
+++ b/fw-child/resources/scss/child.scss
@@ -983,14 +983,6 @@ $query-card-hover-padding: 0.75rem;
         margin-right: $query-card-hover-padding;
       }
     }
-
-    .card.card-enlarged {
-      a {
-        padding: .125rem;
-        margin-right: -.125rem;
-        margin-left: -.125rem;
-      }
-    }
   }
 }
 
